interface IPuntuable {
    fun punts():Integer
}